parser.output
Grammar

    0 $accept: Start $end

    1 Start: ClassList

    2 ClassList: ClassList Class
    3          | Class

    4 Class: T_IDENTIFIER Inherit T_OPEN_BRACKET ClassBody T_CLOSE_BRACKET

    5 Inherit: T_EXTENDS T_IDENTIFIER
    6        | %empty

    7 ClassBody: MemDecList MemMethList
    8          | MemDecList
    9          | MemMethList
   10          | %empty

   11 MemDecList: MemDecList MemDec T_SEMICOLON
   12           | MemDec T_SEMICOLON

   13 MemDec: Type T_IDENTIFIER

   14 Type: T_INTEGER
   15     | T_BOOLEAN
   16     | T_IDENTIFIER
   17     | T_NONE

   18 DeclarList: DeclarList Declare T_SEMICOLON
   19           | Declare T_SEMICOLON

   20 Declare: Type VariableDec

   21 MemMethList: MemMethList MethodDec
   22            | MethodDec

   23 MethodDec: T_IDENTIFIER T_OPEN_PAREN ParaList T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET
   24          | T_IDENTIFIER T_OPEN_PAREN T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET

   25 VariableDec: T_IDENTIFIER
   26            | VariableDec T_COMMA T_IDENTIFIER

   27 Call: T_IDENTIFIER T_DOT T_IDENTIFIER

   28 Expression: Expression T_PLUS Expression
   29           | Expression T_MINUS Expression
   30           | Expression T_MULTIPLY Expression
   31           | Expression T_DIVIDE Expression
   32           | Expression T_GREATER_THAN Expression
   33           | Expression T_GREATER_THAN_EQUALS Expression
   34           | Expression T_EQUALS Expression
   35           | Expression T_AND Expression
   36           | Expression T_OR Expression
   37           | T_NOT Expression
   38           | T_MINUS Expression
   39           | T_IDENTIFIER
   40           | Call
   41           | MethodCall
   42           | T_OPEN_PAREN Expression T_CLOSE_PAREN
   43           | T_INT
   44           | T_TRUE
   45           | T_FALSE
   46           | T_NEW ClassName

   47 ClassName: T_IDENTIFIER
   48          | T_IDENTIFIER T_OPEN_PAREN Arguments T_CLOSE_PAREN
   49          | T_IDENTIFIER T_OPEN_PAREN T_CLOSE_PAREN

   50 MethodCall: T_IDENTIFIER T_OPEN_PAREN Arguments T_CLOSE_PAREN
   51           | T_IDENTIFIER T_DOT T_IDENTIFIER T_OPEN_PAREN Arguments T_CLOSE_PAREN
   52           | T_IDENTIFIER T_OPEN_PAREN T_CLOSE_PAREN
   53           | T_IDENTIFIER T_DOT T_IDENTIFIER T_OPEN_PAREN T_CLOSE_PAREN

   54 Arguments: Arguments T_COMMA Expression
   55          | Expression

   56 Return: T_RETURN Expression T_SEMICOLON
   57       | %empty

   58 ParaList: ParaList T_COMMA Param
   59         | Param

   60 Param: Type T_IDENTIFIER

   61 MethodBod: DeclarList StateList Return
   62          | DeclarList Return
   63          | StateList Return
   64          | Return

   65 StateList: StateList Statement
   66          | Statement

   67 Statement: Assignment
   68          | MethodCall T_SEMICOLON
   69          | IfElse
   70          | While
   71          | DoWhile
   72          | Print

   73 Assignment: T_IDENTIFIER T_ASSIGNMENT Expression T_SEMICOLON
   74           | T_IDENTIFIER T_DOT T_IDENTIFIER T_ASSIGNMENT Expression T_SEMICOLON

   75 IfElse: T_IF Expression T_OPEN_BRACKET StateList T_CLOSE_BRACKET
   76       | T_IF Expression T_OPEN_BRACKET StateList T_CLOSE_BRACKET T_ELSE T_OPEN_BRACKET StateList T_CLOSE_BRACKET

   77 While: T_WHILE Expression T_OPEN_BRACKET StateList T_CLOSE_BRACKET

   78 DoWhile: T_DO T_OPEN_BRACKET StateList T_CLOSE_BRACKET T_WHILE T_OPEN_PAREN Expression T_CLOSE_PAREN T_SEMICOLON

   79 Print: T_PRINT Expression T_SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
T_PLUS (258) 28
T_MINUS (259) 29 38
T_MULTIPLY (260) 30
T_DIVIDE (261) 31
T_GREATER_THAN (262) 32
T_GREATER_THAN_EQUALS (263) 33
T_EQUALS (264) 34
T_AND (265) 35
T_OR (266) 36
T_NOT (267) 37
T_OPEN_BRACKET (268) 4 23 24 75 76 77 78
T_CLOSE_BRACKET (269) 4 23 24 75 76 77 78
T_OPEN_PAREN (270) 23 24 42 48 49 50 51 52 53 78
T_CLOSE_PAREN (271) 23 24 42 48 49 50 51 52 53 78
T_RETURN_TYPE (272) 23 24
T_ASSIGNMENT (273) 73 74
T_DOT (274) 27 51 53 74
T_SEMICOLON (275) 11 12 18 19 56 68 73 74 78 79
T_COMMA (276) 26 54 58
T_IF (277) 75 76
T_ELSE (278) 76
T_WHILE (279) 77 78
T_DO (280) 78
T_PRINT (281) 79
T_RETURN (282) 56
T_INTEGER (283) 14
T_BOOLEAN (284) 15
T_NONE (285) 17
T_NEW (286) 46
T_EXTENDS (287) 5
T_INT (288) 43
T_TRUE (289) 44
T_FALSE (290) 45
T_IDENTIFIER (291) 4 5 13 16 23 24 25 26 27 39 47 48 49 50 51 52 53
    60 73 74
T_UNARY_MINUS (292)


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
Start (39)
    on left: 1, on right: 0
ClassList (40)
    on left: 2 3, on right: 1 2
Class (41)
    on left: 4, on right: 2 3
Inherit (42)
    on left: 5 6, on right: 4
ClassBody (43)
    on left: 7 8 9 10, on right: 4
MemDecList (44)
    on left: 11 12, on right: 7 8 11
MemDec (45)
    on left: 13, on right: 11 12
Type (46)
    on left: 14 15 16 17, on right: 13 20 23 24 60
DeclarList (47)
    on left: 18 19, on right: 18 61 62
Declare (48)
    on left: 20, on right: 18 19
MemMethList (49)
    on left: 21 22, on right: 7 9 21
MethodDec (50)
    on left: 23 24, on right: 21 22
VariableDec (51)
    on left: 25 26, on right: 20 26
Call (52)
    on left: 27, on right: 40
Expression (53)
    on left: 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
    46, on right: 28 29 30 31 32 33 34 35 36 37 38 42 54 55 56 73 74
    75 76 77 78 79
ClassName (54)
    on left: 47 48 49, on right: 46
MethodCall (55)
    on left: 50 51 52 53, on right: 41 68
Arguments (56)
    on left: 54 55, on right: 48 50 51 54
Return (57)
    on left: 56 57, on right: 61 62 63 64
ParaList (58)
    on left: 58 59, on right: 23 58
Param (59)
    on left: 60, on right: 58 59
MethodBod (60)
    on left: 61 62 63 64, on right: 23 24
StateList (61)
    on left: 65 66, on right: 61 63 65 75 76 77 78
Statement (62)
    on left: 67 68 69 70 71 72, on right: 65 66
Assignment (63)
    on left: 73 74, on right: 67
IfElse (64)
    on left: 75 76, on right: 69
While (65)
    on left: 77, on right: 70
DoWhile (66)
    on left: 78, on right: 71
Print (67)
    on left: 79, on right: 72


State 0

    0 $accept: . Start $end

    T_IDENTIFIER  shift, and go to state 1

    Start      go to state 2
    ClassList  go to state 3
    Class      go to state 4


State 1

    4 Class: T_IDENTIFIER . Inherit T_OPEN_BRACKET ClassBody T_CLOSE_BRACKET

    T_EXTENDS  shift, and go to state 5

    $default  reduce using rule 6 (Inherit)

    Inherit  go to state 6


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 7


State 3

    1 Start: ClassList .
    2 ClassList: ClassList . Class

    T_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 1 (Start)

    Class  go to state 8


State 4

    3 ClassList: Class .

    $default  reduce using rule 3 (ClassList)


State 5

    5 Inherit: T_EXTENDS . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 9


State 6

    4 Class: T_IDENTIFIER Inherit . T_OPEN_BRACKET ClassBody T_CLOSE_BRACKET

    T_OPEN_BRACKET  shift, and go to state 10


State 7

    0 $accept: Start $end .

    $default  accept


State 8

    2 ClassList: ClassList Class .

    $default  reduce using rule 2 (ClassList)


State 9

    5 Inherit: T_EXTENDS T_IDENTIFIER .

    $default  reduce using rule 5 (Inherit)


State 10

    4 Class: T_IDENTIFIER Inherit T_OPEN_BRACKET . ClassBody T_CLOSE_BRACKET

    T_INTEGER     shift, and go to state 11
    T_BOOLEAN     shift, and go to state 12
    T_NONE        shift, and go to state 13
    T_IDENTIFIER  shift, and go to state 14

    $default  reduce using rule 10 (ClassBody)

    ClassBody    go to state 15
    MemDecList   go to state 16
    MemDec       go to state 17
    Type         go to state 18
    MemMethList  go to state 19
    MethodDec    go to state 20


State 11

   14 Type: T_INTEGER .

    $default  reduce using rule 14 (Type)


State 12

   15 Type: T_BOOLEAN .

    $default  reduce using rule 15 (Type)


State 13

   17 Type: T_NONE .

    $default  reduce using rule 17 (Type)


State 14

   16 Type: T_IDENTIFIER .
   23 MethodDec: T_IDENTIFIER . T_OPEN_PAREN ParaList T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET
   24          | T_IDENTIFIER . T_OPEN_PAREN T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET

    T_OPEN_PAREN  shift, and go to state 21

    $default  reduce using rule 16 (Type)


State 15

    4 Class: T_IDENTIFIER Inherit T_OPEN_BRACKET ClassBody . T_CLOSE_BRACKET

    T_CLOSE_BRACKET  shift, and go to state 22


State 16

    7 ClassBody: MemDecList . MemMethList
    8          | MemDecList .
   11 MemDecList: MemDecList . MemDec T_SEMICOLON

    T_INTEGER     shift, and go to state 11
    T_BOOLEAN     shift, and go to state 12
    T_NONE        shift, and go to state 13
    T_IDENTIFIER  shift, and go to state 14

    $default  reduce using rule 8 (ClassBody)

    MemDec       go to state 23
    Type         go to state 18
    MemMethList  go to state 24
    MethodDec    go to state 20


State 17

   12 MemDecList: MemDec . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 25


State 18

   13 MemDec: Type . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 26


State 19

    9 ClassBody: MemMethList .
   21 MemMethList: MemMethList . MethodDec

    T_IDENTIFIER  shift, and go to state 27

    $default  reduce using rule 9 (ClassBody)

    MethodDec  go to state 28


State 20

   22 MemMethList: MethodDec .

    $default  reduce using rule 22 (MemMethList)


State 21

   23 MethodDec: T_IDENTIFIER T_OPEN_PAREN . ParaList T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET
   24          | T_IDENTIFIER T_OPEN_PAREN . T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET

    T_CLOSE_PAREN  shift, and go to state 29
    T_INTEGER      shift, and go to state 11
    T_BOOLEAN      shift, and go to state 12
    T_NONE         shift, and go to state 13
    T_IDENTIFIER   shift, and go to state 30

    Type      go to state 31
    ParaList  go to state 32
    Param     go to state 33


State 22

    4 Class: T_IDENTIFIER Inherit T_OPEN_BRACKET ClassBody T_CLOSE_BRACKET .

    $default  reduce using rule 4 (Class)


State 23

   11 MemDecList: MemDecList MemDec . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 34


State 24

    7 ClassBody: MemDecList MemMethList .
   21 MemMethList: MemMethList . MethodDec

    T_IDENTIFIER  shift, and go to state 27

    $default  reduce using rule 7 (ClassBody)

    MethodDec  go to state 28


State 25

   12 MemDecList: MemDec T_SEMICOLON .

    $default  reduce using rule 12 (MemDecList)


State 26

   13 MemDec: Type T_IDENTIFIER .

    $default  reduce using rule 13 (MemDec)


State 27

   23 MethodDec: T_IDENTIFIER . T_OPEN_PAREN ParaList T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET
   24          | T_IDENTIFIER . T_OPEN_PAREN T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET

    T_OPEN_PAREN  shift, and go to state 21


State 28

   21 MemMethList: MemMethList MethodDec .

    $default  reduce using rule 21 (MemMethList)


State 29

   24 MethodDec: T_IDENTIFIER T_OPEN_PAREN T_CLOSE_PAREN . T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET

    T_RETURN_TYPE  shift, and go to state 35


State 30

   16 Type: T_IDENTIFIER .

    $default  reduce using rule 16 (Type)


State 31

   60 Param: Type . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 36


State 32

   23 MethodDec: T_IDENTIFIER T_OPEN_PAREN ParaList . T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET
   58 ParaList: ParaList . T_COMMA Param

    T_CLOSE_PAREN  shift, and go to state 37
    T_COMMA        shift, and go to state 38


State 33

   59 ParaList: Param .

    $default  reduce using rule 59 (ParaList)


State 34

   11 MemDecList: MemDecList MemDec T_SEMICOLON .

    $default  reduce using rule 11 (MemDecList)


State 35

   24 MethodDec: T_IDENTIFIER T_OPEN_PAREN T_CLOSE_PAREN T_RETURN_TYPE . Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET

    T_INTEGER     shift, and go to state 11
    T_BOOLEAN     shift, and go to state 12
    T_NONE        shift, and go to state 13
    T_IDENTIFIER  shift, and go to state 30

    Type  go to state 39


State 36

   60 Param: Type T_IDENTIFIER .

    $default  reduce using rule 60 (Param)


State 37

   23 MethodDec: T_IDENTIFIER T_OPEN_PAREN ParaList T_CLOSE_PAREN . T_RETURN_TYPE Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET

    T_RETURN_TYPE  shift, and go to state 40


State 38

   58 ParaList: ParaList T_COMMA . Param

    T_INTEGER     shift, and go to state 11
    T_BOOLEAN     shift, and go to state 12
    T_NONE        shift, and go to state 13
    T_IDENTIFIER  shift, and go to state 30

    Type   go to state 31
    Param  go to state 41


State 39

   24 MethodDec: T_IDENTIFIER T_OPEN_PAREN T_CLOSE_PAREN T_RETURN_TYPE Type . T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET

    T_OPEN_BRACKET  shift, and go to state 42


State 40

   23 MethodDec: T_IDENTIFIER T_OPEN_PAREN ParaList T_CLOSE_PAREN T_RETURN_TYPE . Type T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET

    T_INTEGER     shift, and go to state 11
    T_BOOLEAN     shift, and go to state 12
    T_NONE        shift, and go to state 13
    T_IDENTIFIER  shift, and go to state 30

    Type  go to state 43


State 41

   58 ParaList: ParaList T_COMMA Param .

    $default  reduce using rule 58 (ParaList)


State 42

   24 MethodDec: T_IDENTIFIER T_OPEN_PAREN T_CLOSE_PAREN T_RETURN_TYPE Type T_OPEN_BRACKET . MethodBod T_CLOSE_BRACKET

    T_IF          shift, and go to state 44
    T_WHILE       shift, and go to state 45
    T_DO          shift, and go to state 46
    T_PRINT       shift, and go to state 47
    T_RETURN      shift, and go to state 48
    T_INTEGER     shift, and go to state 11
    T_BOOLEAN     shift, and go to state 12
    T_NONE        shift, and go to state 13
    T_IDENTIFIER  shift, and go to state 49

    $default  reduce using rule 57 (Return)

    Type        go to state 50
    DeclarList  go to state 51
    Declare     go to state 52
    MethodCall  go to state 53
    Return      go to state 54
    MethodBod   go to state 55
    StateList   go to state 56
    Statement   go to state 57
    Assignment  go to state 58
    IfElse      go to state 59
    While       go to state 60
    DoWhile     go to state 61
    Print       go to state 62


State 43

   23 MethodDec: T_IDENTIFIER T_OPEN_PAREN ParaList T_CLOSE_PAREN T_RETURN_TYPE Type . T_OPEN_BRACKET MethodBod T_CLOSE_BRACKET

    T_OPEN_BRACKET  shift, and go to state 63


State 44

   75 IfElse: T_IF . Expression T_OPEN_BRACKET StateList T_CLOSE_BRACKET
   76       | T_IF . Expression T_OPEN_BRACKET StateList T_CLOSE_BRACKET T_ELSE T_OPEN_BRACKET StateList T_CLOSE_BRACKET

    T_MINUS       shift, and go to state 64
    T_NOT         shift, and go to state 65
    T_OPEN_PAREN  shift, and go to state 66
    T_NEW         shift, and go to state 67
    T_INT         shift, and go to state 68
    T_TRUE        shift, and go to state 69
    T_FALSE       shift, and go to state 70
    T_IDENTIFIER  shift, and go to state 71

    Call        go to state 72
    Expression  go to state 73
    MethodCall  go to state 74


State 45

   77 While: T_WHILE . Expression T_OPEN_BRACKET StateList T_CLOSE_BRACKET

    T_MINUS       shift, and go to state 64
    T_NOT         shift, and go to state 65
    T_OPEN_PAREN  shift, and go to state 66
    T_NEW         shift, and go to state 67
    T_INT         shift, and go to state 68
    T_TRUE        shift, and go to state 69
    T_FALSE       shift, and go to state 70
    T_IDENTIFIER  shift, and go to state 71

    Call        go to state 72
    Expression  go to state 75
    MethodCall  go to state 74


State 46

   78 DoWhile: T_DO . T_OPEN_BRACKET StateList T_CLOSE_BRACKET T_WHILE T_OPEN_PAREN Expression T_CLOSE_PAREN T_SEMICOLON

    T_OPEN_BRACKET  shift, and go to state 76


State 47

   79 Print: T_PRINT . Expression T_SEMICOLON

    T_MINUS       shift, and go to state 64
    T_NOT         shift, and go to state 65
    T_OPEN_PAREN  shift, and go to state 66
    T_NEW         shift, and go to state 67
    T_INT         shift, and go to state 68
    T_TRUE        shift, and go to state 69
    T_FALSE       shift, and go to state 70
    T_IDENTIFIER  shift, and go to state 71

    Call        go to state 72
    Expression  go to state 77
    MethodCall  go to state 74


State 48

   56 Return: T_RETURN . Expression T_SEMICOLON

    T_MINUS       shift, and go to state 64
    T_NOT         shift, and go to state 65
    T_OPEN_PAREN  shift, and go to state 66
    T_NEW         shift, and go to state 67
    T_INT         shift, and go to state 68
    T_TRUE        shift, and go to state 69
    T_FALSE       shift, and go to state 70
    T_IDENTIFIER  shift, and go to state 71

    Call        go to state 72
    Expression  go to state 78
    MethodCall  go to state 74


State 49

   16 Type: T_IDENTIFIER .
   50 MethodCall: T_IDENTIFIER . T_OPEN_PAREN Arguments T_CLOSE_PAREN
   51           | T_IDENTIFIER . T_DOT T_IDENTIFIER T_OPEN_PAREN Arguments T_CLOSE_PAREN
   52           | T_IDENTIFIER . T_OPEN_PAREN T_CLOSE_PAREN
   53           | T_IDENTIFIER . T_DOT T_IDENTIFIER T_OPEN_PAREN T_CLOSE_PAREN
   73 Assignment: T_IDENTIFIER . T_ASSIGNMENT Expression T_SEMICOLON
   74           | T_IDENTIFIER . T_DOT T_IDENTIFIER T_ASSIGNMENT Expression T_SEMICOLON

    T_OPEN_PAREN  shift, and go to state 79
    T_ASSIGNMENT  shift, and go to state 80
    T_DOT         shift, and go to state 81

    $default  reduce using rule 16 (Type)


State 50

   20 Declare: Type . VariableDec

    T_IDENTIFIER  shift, and go to state 82

    VariableDec  go to state 83


State 51
